SERVER-69134 Adding a way to clear the metadata manager