src/mongo/db/s/rename_collection_participant_service.cpp
@@ -320,8 +320,19 @@ SemiFuture<void> RenameParticipantInstance::_runImpl(
                 // recovered the next time is accessed) and to safely create new range deletion
                 // tasks (the submission will serialize on the renamed collection's metadata
                 // refresh).
-                clearFilteringMetadata(opCtx, fromNss());
-                clearFilteringMetadata(opCtx, toNss());
+                {
+                    Lock::DBLock dbLock(opCtx, fromNss().dbName(), MODE_IX);
+                    Lock::CollectionLock collLock(opCtx, fromNss(), MODE_IX);
+                    auto* csr = CollectionShardingRuntime::get(opCtx, fromNss());
+                    csr->clearFilteringMetadataForDroppedCollection(opCtx);
+                }
+
+                {
+                    Lock::DBLock dbLock(opCtx, toNss().dbName(), MODE_IX);
+                    Lock::CollectionLock collLock(opCtx, toNss(), MODE_IX);
+                    auto* csr = CollectionShardingRuntime::get(opCtx, toNss());
+                    csr->clearFilteringMetadata(opCtx);
+                }
 
                 snapshotRangeDeletionsForRename(opCtx, fromNss(), toNss());
             }))
